--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   firebase_auth: ^4.10.1
   google_sign_in: ^6.1.5
   dio: ^5.0.0
+  intl: ^0.19.0
 
 
   # The following adds the Cupertino Icons font to your application.
