--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -66,5 +66,7 @@ flutter {
     source '../..'
 }
 
-dependencies {}
+dependencies {
+    implementation 'androidx.multidex:multidex:2.0.1'
+}
 apply plugin: 'com.google.gms.google-services'
