--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.1.2
   go_router: ^14.2.6
+  convex_bottom_bar: ^3.2.0
 
 dev_dependencies:
   flutter_test:
