--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,8 @@ flutter:
       - assets/google.png
       - assets/out.png
       - assets/notdata.png
+      - assets/freetime.png
+      - assets/solutions.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
