--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   provider: ^6.1.2
   go_router: ^14.2.6
   convex_bottom_bar: ^3.2.0
+  url_launcher: ^6.0.20
+  flutter_phone_direct_caller: ^2.1.1
 
 dev_dependencies:
   flutter_test:
