--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,9 @@ dependencies:
   google_sign_in: ^6.1.5
   dio: ^5.0.0
   intl: ^0.19.0
-  json_annotation: ^4.8.0
+  build_runner: ^2.4.12
+
+  
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -49,10 +51,14 @@ dependencies:
   url_launcher: ^6.0.20
   flutter_phone_direct_caller: ^2.1.1
 
+  
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_launcher_icons: ^0.13.1
+  json_serializable: ^6.8.0
+  
 flutter_icons:
   android: true
   ios: true
